<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/posterView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundedCorners"
            app:cardBackgroundColor="@color/blue_end_translucent"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/default_profile"
                android:background="@android:color/transparent"/>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="41dp"
            app:layout_constraintBottom_toBottomOf="@+id/NameField"
            app:layout_constraintEnd_toStartOf="@+id/NameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/NameField"
            app:srcCompat="@drawable/pencil" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="38dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pencil" />

        <!-- Additional ImageViews and EditTexts -->

        <EditText
            android:id="@+id/NameField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/blue_start"
            android:padding="10dp"
            android:hint="@string/Event_Name"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterView" />

        <EditText
            android:id="@+id/LocationField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/blue_start"
            android:padding="10dp"
            android:hint="@string/Location"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameField" />

        <TextView
            android:id="@+id/Startdatefield"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/blue_start"
            android:padding="10dp"
            android:hint="@string/Start_Date"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LocationField" />

        <TextView
            android:id="@+id/DrawdateField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/blue_start"
            android:padding="10dp"
            android:hint="@string/Draw_Date"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Startdatefield" />

        <EditText
            android:id="@+id/Capacityfield"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/blue_start"
            android:padding="10dp"
            android:hint="@string/Capacity_Prompt"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DrawdateField" />

        <TextView
            android:id="@+id/TextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Geolocation"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Capacityfield" />



        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/GeoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/TextView"
            app:layout_constraintEnd_toEndOf="@+id/TextView"
            app:layout_constraintTop_toTopOf="@+id/TextView"
            android:trackTint="@color/blue_start" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/delete_red"
            android:text="@string/Delete"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/draw_entrants_button" />

        <Button
            android:id="@+id/draw_entrants_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="Draw Entrants"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView" />

        <Button
            android:id="@+id/view_participants_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View participants"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/draw_entrants_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/QRcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/default_profile"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/create" />

        <TextView
            android:id="@+id/tvSelectedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="8dp"
            android:text="Selected Location: None"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GeoSwitch" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
